// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookmarks empty state 1`] = `
<div
  class="dropdown btn-group"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="dropdown-toggle btn btn-default"
    id="hosts"
    role="button"
    title="Bookmarks"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-bookmark"
    />
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="hosts"
    class="scrollable-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        id="newBookmark"
        role="menuitem"
        tabindex="-1"
      >
        Bookmark this search
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        <span
          aria-hidden="true"
          class="fa fa-question-circle"
        />
         Documentation
      </a>
    </li>
    <li
      class="divider"
      role="separator"
    />
    <li
      class="dropdown-header"
      role="heading"
    >
      Saved Bookmarks
    </li>
  </ul>
</div>
`;

exports[`bookmarks should show an error message if loading failed 1`] = `
<div
  class="dropdown btn-group"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="dropdown-toggle btn btn-default"
    id="hosts"
    role="button"
    title="Bookmarks"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-bookmark"
    />
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="hosts"
    class="scrollable-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        id="newBookmark"
        role="menuitem"
        tabindex="-1"
      >
        Bookmark this search
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        <span
          aria-hidden="true"
          class="fa fa-question-circle"
        />
         Documentation
      </a>
    </li>
    <li
      class="divider"
      role="separator"
    />
    <li
      class="dropdown-header"
      role="heading"
    >
      Saved Bookmarks
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        <div
          style="overflow:hidden;overflow-wrap:break-word;text-overflow:ellipsis;white-space:nowrap;word-break:break-all"
        >
          Failed to load bookmarks: %s
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`bookmarks should show no bookmarks if server did not respond with any 1`] = `
<div
  class="dropdown btn-group"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="dropdown-toggle btn btn-default"
    id="hosts"
    role="button"
    title="Bookmarks"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-bookmark"
    />
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="hosts"
    class="scrollable-dropdown dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        id="newBookmark"
        role="menuitem"
        tabindex="-1"
      >
        Bookmark this search
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        <span
          aria-hidden="true"
          class="fa fa-question-circle"
        />
         Documentation
      </a>
    </li>
    <li
      class="divider"
      role="separator"
    />
    <li
      class="dropdown-header"
      role="heading"
    >
      Saved Bookmarks
    </li>
    <li
      class="disabled"
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
         None found
      </a>
    </li>
  </ul>
</div>
`;
